--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info">
 												<h3>brand <span class="category">category</span> </h3>
-												<p><a href="https://minyoungs097y.github.io/BECO_main/" target="blank"> <span>Website : &nbsp;</span> https://minyoungs097y.github.io/BECO_main/</a></p>
+												<p><a href="https://minyoungs097y.github.io/BECO_main/" target="blank"> <span>&nbsp;</span> https://minyoungs097y.github.io/BECO_main/</a></p>
 												<div class="project_btn_box">
-												<a href="https://minyoungs097y.github.io/bibx_guide/" class="project_btn">BI/BX</a>
-												<a href="https://minyoungs097y.github.io/web_guide/" class="project_btn">WebGuide</a>
-                                                <a href="https://minyoungs097y.github.io/bibx_ebook/samples/basic/" class="project_btn">E-book(bibx)</a>
-                                                <a href="https://minyoungs097y.github.io/web_ebook/samples/basic/" class="project_btn">E-book(web)</a>
+												<a href="https://minyoungs097y.github.io/bibx_guide/" class="project_btn" target="blank">BI/BX</a>
+												<a href="https://minyoungs097y.github.io/web_guide/" class="project_btn" target="blank">WebGuide</a>
+                                                <a href="https://minyoungs097y.github.io/bibx_ebook/samples/basic/" class="project_btn" target="blank">E-book(bibx)</a>
+                                                <a href="https://minyoungs097y.github.io/web_ebook/samples/basic/" class="project_btn" target="blank">E-book(web)</a>
 												</div>
 											</div>
                                         </div>
