--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 							</div>
 							
 							<div class="col-md-12 graphics">
-                            <!-- single work -->
+                            <!-- single work
                             <div class="col-md-4 col-sm-6 photography">
                                 <div class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
                                     
@@ -212,7 +212,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- end single work -->
+                            end single work -->
 
                             </div>
                         </div>
