--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                                 </div>
                             </div>
                             <!-- end single work -->
-                     <!--아트웍 추가하면 주석 풀기
-                            <!-- single work -->
+                     	    <!--아트웍 추가하면 주석 풀기
+                            <!-- single work 
                             <div class="col-md-6 col-sm-6 fashion ads">
                                 <div class="portfolio_item"> 
                                     <div class="portfolio_item">
@@ -185,7 +185,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- end single work -->
+                            <!-- end single work-->
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 photography">
@@ -193,9 +193,10 @@
                                     
                                 </div>
                             </div>
-                            <!-- end single work -->
+                            <!-- end single work-->
                             
-                            <!-- single work -->
+			    <!--아트웍2 추가하면 주석 풀기
+                            <!-- single work
                             <div class="col-md-6 col-sm-6 fashion ads">
                                 <div class="portfolio_item"> 
                                     <div class="portfolio_item">
@@ -212,8 +213,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <--end single work -->
-			-->
+                            <--end single work-->
                             </div>
                         </div>
                         <!-- end portfolio_container -->
