--- a/index.html
+++ b/index.html
@@ -185,15 +185,15 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- end single work-->
+                            <!-- end single work
 
-                            <!-- single work -->
+                            <!-- single work
                             <div class="col-md-4 col-sm-6 photography">
                                 <div class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
                                     
                                 </div>
                             </div>
-                            <!-- end single work-->
+                            <!-- end single work
                             
 			    <!--아트웍2 추가하면 주석 풀기
                             <!-- single work
